style.css
body {
    background-color: #2b2b2b; 
    color: #f7e6d7; 
    font-family: sans-serif;
    margin: 0;
}

.Navbar {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 20px 50px;
}

.hero {
    display: flex;
    align-items: self-start;
    justify-content: space-around;
    padding: 20px;
    height: 80vh;
}

h1 {
    font-size: 2rem;
    line-height: 1.2;
}

p {
    font-size: 1rem;
    line-height: 1.2;
}

.button {
    background: transparent;
    border: 1px solid #f7e6d7;
    color: #f7e6d7;
    padding: 10px 30px;
    cursor: pointer;
    border-radius: 10px;
}

.hero-image img {
    max-width: 500px;
    
    filter: grayscale(100%);
}

.nav{
    display: flex;
    gap: 20px;
    align-items: center;
    justify-content: flex-end;
    
}

.nav a{
    text-decoration: none;
    color: #f7e6d7;
    font-family: sans-serif;
}

.login{
  background: transparent;
  border: 1px solid #f7e6d7;
  color: #f7e6d7;
  padding: 10px 30px;
  cursor: pointer;
    border-radius: 10px;
}

